--- a/client/app.json
+++ b/client/app.json
@@ -1,7 +1,9 @@
 {
   "pages": [
-    "pages/index/index",
-    "pages/addCgi/addCgi"
+    "pages/home/home",
+    "pages/order/order",
+    "pages/trolley/trolly",
+    "pages/user/user"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
