--- a/client/app.json
+++ b/client/app.json
@@ -3,7 +3,8 @@
     "pages/home/home",
     "pages/order/order",
     "pages/trolley/trolley",
-    "pages/user/user"
+    "pages/user/user",
+    "pages/detail/detail"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
@@ -14,29 +15,31 @@
   },
   "sitemapLocation": "sitemap.json",
   "tabBar": {
-    "list": [{
-      "pagePath": "pages/home/home",
-      "text": "首页",
-      "iconPath": "images/home.png",
-      "selectedIconPath": "images/home-sel.png"
-    },
-    {
-      "pagePath": "pages/order/order",
-      "text": "订单",
-      "iconPath": "images/order.png",
-      "selectedIconPath": "images/order-sel.png"
-    },
-    {
-      "pagePath": "pages/trolley/trolley",
-      "text": "购物车",
-      "iconPath": "images/trolley.png",
-      "selectedIconPath": "images/trolley-sel.png"
-    },
-    {
-      "pagePath": "pages/user/user",
-      "text": "个人中心",
-      "iconPath": "images/user.png",
-      "selectedIconPath": "images/user-sel.png"
-    }]
+    "list": [
+      {
+        "pagePath": "pages/home/home",
+        "text": "首页",
+        "iconPath": "images/home.png",
+        "selectedIconPath": "images/home-sel.png"
+      },
+      {
+        "pagePath": "pages/order/order",
+        "text": "订单",
+        "iconPath": "images/order.png",
+        "selectedIconPath": "images/order-sel.png"
+      },
+      {
+        "pagePath": "pages/trolley/trolley",
+        "text": "购物车",
+        "iconPath": "images/trolley.png",
+        "selectedIconPath": "images/trolley-sel.png"
+      },
+      {
+        "pagePath": "pages/user/user",
+        "text": "个人中心",
+        "iconPath": "images/user.png",
+        "selectedIconPath": "images/user-sel.png"
+      }
+    ]
   }
 }
